deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-storage
  labels: 
    app: voting-storage
spec:
  ports:
  - port: 6379
    name: redis
  - port: 3306
    name: mysql
  selector:
    app: voting-storage
---
apiVersion: v1
kind: Service
metadata:
  name: voting-analytics
  labels: 
    app: voting-analytics
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: voting-analytics
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app
spec:
  selector:
    app: voting-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-storage-2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-storage
      version: "2.0"
  template:
    metadata:
      labels:
        app: voting-storage
        version: "2.0"
    spec:
      containers:
      - name: voting-storage
        image: mjgk8sacr.azurecr.io/voting/storage:2.0
        args: ["--ignore-db-dir=lost+found"]
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-analytics-2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-analytics
      version: "2.0"
  template:
    metadata:
      labels:
        app: voting-analytics
        version: "2.0"
    spec:
      containers:
      - name: voting-analytics
        image: mjgk8sacr.azurecr.io/voting/analytics:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app-2-0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app
      version: "2.0"
  template:
    metadata:
      labels:
        app: voting-app
        version: "2.0"
    spec:
      containers:
      - name: voting-app
        image: mjgk8sacr.azurecr.io/voting/app:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: votingapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: votingapp.releasr.io
    http:
      paths:
      - backend:
          serviceName: voting-app
          servicePort: 80
